# django-subjective-sort

./: LICENSE  README.md  coverage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml  publish.yml
src/django_subjective_sort/: models.py
tests/: settings.py  test_main.py  tests.py
