[tool.poetry]
name = "django-subjective-sort"
version = "0.1.0"
description = "Allows items of a collection to be manually sorted (such as for use with drag-and-drop)."
authors = ["Michael Prather <michael@krit.com>"]
license = "MIT"
repository = "https://github.com/builtbykrit/django-subjective-sort"
keywords = ["sort", "sorting", "drag", "drop"]
classifiers = [
    "Programming Language :: Python",
    "Framework :: Django :: 4.1",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
Django = "^4.0.4"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
